[iOS] Check for toolbar frame updates after each layout pass.

When safe area inset usage is enabled, the constraint system bypasses
|-setFrame:| when updating the view upon rotation, so the omnibox's and
buttons' opacities were not updated properly.  This CL changes the
delegate protocol to wait for layout events rather than frame setting.

Bug: 778750
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I0cbd3bf66f0c53a156da269ed510fcad71ed87ec
Reviewed-on: https://chromium-review.googlesource.com/745723
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512874}
Former-commit-id: cd6ceee5322b9a3fce70e1fdae83264def9e2153