ios/chrome/browser/ui/toolbar/toolbar_view.mm
@@ -6,7 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "ios/chrome/browser/ui/toolbar/toolbar_view.h"
 
 #import "ios/chrome/browser/ui/toolbar/public/toolbar_controller_base_feature.h"
-#import "ios/chrome/browser/ui/toolbar/toolbar_frame_delegate.h"
+#import "ios/chrome/browser/ui/toolbar/toolbar_view_delegate.h"
 
 @implementation ToolbarView
 
@@ -58,10 +58,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   return hitView;
 }
 
-- (void)setFrame:(CGRect)frame {
-  CGRect oldFrame = self.frame;
-  [super setFrame:frame];
-  [delegate_ frameDidChangeFrame:frame fromFrame:oldFrame];
+- (void)layoutSubviews {
+  [super layoutSubviews];
+  [delegate_ toolbarDidLayout];
 }
 
 - (void)didMoveToWindow {
